--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   web:
     build: .
     container_name: labour_crm_web
-    command: gunicorn labour_crm.wsgi:application --bind 0.0.0.0:8000
+    command: /app/startup.sh
     volumes:
       - .:/app
     ports:
