--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,10 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: work1234
       POSTGRES_HOST: db
+      API_VERSION: v19.0
+      META_API_URL: https://graph.facebook.com/
+      META_ACCESS_TOKEN: EAAhMBt21QaMBPCyLtJj6gwjDy6Gai4fZApb3MXuZBZCCm0iSEd8ZCZCJdkRt4cOtvhyeFLZCNUwitFaLZA3ZCwv7enN6FBFgDMAOKl7LMx0J2kCjy6Qd6AqnbnhB2bo2tgsdGmn9ZCN5MD6yCgE3shuP62t1spfSB6ZALy1QkNLvIaeWZBcvPH00HHpyW6US4kil2ENZADL4ZCvDLVWV9seSbZCxXYzVCezIenCjhSYtoKTIlJ
+      PHONE_NUMBER_ID: 694609297073147
      
 
 volumes:
