--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@
 # WABA_ID=1477047197063313
 # API_VERSION=v19.0
 # DATABASE_URL=postgresql://myuser:f65D5QioijNmjckcsT4em6acqpNa0s6D@dpg-d24uh1hr0fns73dgpf80-a/myproject_at9a
+
+GOOGLE_API_KEY="AIzaSyCh0DeWCZr8m3kF4LDB2A_xoAlqbmKjvgs"
